# diffable

./: .gitignore  CLAUDE.md  _templates.py  diffable.py  pyproject.toml
diffable/: __init__.py  __main__.py  _templates.py  core.py
docs/: gitignore.txt
